# autocare-mechanic-finder

./: .pre-commit-config.yaml  README.md  mycarcare.yaml
autocare-mechanic-finder/: README.md  mycarcare.yaml
autocare-mechanic-finder/backend/: LICENSE.txt  pyproject.toml
autocare-mechanic-finder/backend/src/app/: __about__.py  main.py
autocare-mechanic-finder/backend/src/app/core/: __init__.py  auth.py  config.py  crud.py  database.py
autocare-mechanic-finder/backend/src/app/models/: models.py
autocare-mechanic-finder/backend/src/app/routes/: car.py  user.py
autocare-mechanic-finder/backend/tests/: __init__.py
autocare-mechanic-finder/frontend/: package-lock.json  package.json
backend/: .env  LICENSE.txt  mycarcare.db  pyproject.toml
backend/app/: pyproject.toml
backend/src/app/: __about__.py  main.py
backend/src/app/core/: __init__.py  auth.py  config.py  crud.py  database.py
backend/src/app/models/: models.py
backend/src/app/routes/: car.py  user.py
backend/src/app/schemas/: car.py  token.py  users.py
backend/src/app/services/: autoparts.py  car.py  car_service.py  mechanic.py  user.py
backend/tests/: __init__.py
frontend/: .env  .prettierignore  MyCarCare.txt  package-lock.json  package.json  prettierrc.json
frontend/src/Login/Compotent/: LoginCompotent.tsx  LoginPage.tsx  Register.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/AutoshopFinder/: page.tsx
frontend/src/app/AutoshopFinderPage/: page.tsx
frontend/src/app/Login/: LoginCompotent.tsx  LoginPage.tsx
frontend/src/app/RegisterCar/: page.tsx
frontend/src/app/RegisterCarPage/: page.tsx
frontend/src/app/RegisterUserPage/: page.tsx
frontend/src/app/car-parts/: page.tsx
frontend/src/app/carprofile/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/tutorials/: page.tsx
frontend/src/components/: AddCarButton.tsx  AutoshopFinderForm.tsx  EditCarButton.tsx  GetCarInfo.tsx  Login.tsx  NavBar.tsx  NavigationBar.tsx  NavigationSidebar.tsx  Register.tsx  RegisterUserForm.tsx  SignInButton.tsx  SignOutButton.tsx  UpdateCarForm.tsx  UpdateUserForm.tsx  UserGarage.tsx  UserNotifications.tsx  carInfo.tsx
frontend/src/components/ui/: MenuButton.tsx  SearchForm.tsx  SideBar.tsx
frontend/src/lib/: constants.ts
(+16 files in other folders)
